--- a/CSS/media.css
+++ b/CSS/media.css
@@ -5,7 +5,7 @@
 }
 
 @media (max-width: 768px) {
-    .container{
+    .container {
         width: 725px;
     }
 
@@ -23,7 +23,7 @@
         background: #7785ca;
         top: 0;
         right: 0;
-        width: 100px;
+        width: 150px;
         height: 100%;
         display: flex;
         justify-content: center;
@@ -34,9 +34,12 @@
     }
 
     .top-menu.show .top-menu-item {
-        margin-top: 10px;
-        padding: 20px;
+        margin-top: 30px;
+        padding: 10px;
         z-index: 9;
+    }
+    .top-menu-item:not(:last-child) {
+        margin-right: 0;
     }
 
     .top-menu-item:hover:before {
@@ -52,9 +55,11 @@
     .logo {
         font-size: 35px;
     }
+
     .hero-link {
         font-size: 13px;
     }
+
     .hero-title {
         font-size: 35px;
         line-height: 45px;
@@ -64,92 +69,115 @@
     .btn {
         width: 140px;
     }
+
     .info-company {
         padding: 50px 0;
     }
+
     .title-company {
         font-weight: bold;
         font-size: 28px;
         line-height: 40px;
         margin-bottom: 25px;
     }
+
     .desc-company {
         font-size: 13px;
     }
+
     .company-content {
         margin-top: 50px;
     }
+
     .service-icon {
         width: 60px;
         height: 60px;
     }
+
     .service-icon:before {
         width: 90px;
         height: 90px;
     }
+
     .row {
         margin: 0 20px;
     }
+
     .info-company .col-4 {
         width: 33.3333%;
         padding: 0 20px;
     }
+
     .services-item {
         margin-left: 80px;
     }
+
     .title-company-content {
         font-size: 16px;
         line-height: 22px;
         padding-top: 40px;
     }
+
     .desc-company-content {
         font-size: 12px;
         line-height: 22px;
-}
+    }
 
     .info-company .btn {
         margin-top: 35px;
     }
-    .underline{
+
+    .underline {
         width: 650px;
     }
+
     .projects {
         padding: 55px 0 70px;
     }
+
     .projects .row {
         margin: 0 20px;
     }
+
     .projects .col-6 {
         padding: 0 10px;
     }
-    .projects .underline{
+
+    .projects .underline {
         bottom: 90px;
     }
+
     .content-projects {
         margin-top: 10px;
     }
+
     .title-projects {
         font-size: 26px;
         line-height: 30px;
         padding-bottom: 20px;
     }
+
     .desc-projects {
         font-size: 12px;
         line-height: 25px;
         padding-bottom: 15px;
     }
+
     .link-project {
         font-size: 12px;
         line-height: 0;
     }
+
     .standard-list {
         margin-top: 80px;
     }
+
     .standard-icon h4 {
         padding: 0 5px 5px;
         font-size: 30px;
         line-height: 30px;
     }
+
     .standard-item p {
         font-size: 14px;
         line-height: 15px;
@@ -158,16 +186,20 @@
     .team-project {
         padding: 40px 0 80px;
     }
+
     .team-project:before {
         height: 30%;
     }
+
     .team-project .underline {
         bottom: 45px;
     }
+
     .title-team-project {
         font-size: 28px;
         line-height: 45px;
     }
+
     .team-project .row {
         margin: 0 -7px;
     }
@@ -187,14 +219,17 @@
         font-size: 12px;
         line-height: 22px;
     }
+
     .link-team-project {
         padding-top: 20px;
         font-size: 12px;
         line-height: 20px;
     }
+
     .our-project {
         padding: 45px 0 60px;
     }
+
     .title-our-project {
         font-size: 30px;
         line-height: 30px;
@@ -206,9 +241,11 @@
         line-height: 25px;
         margin-bottom: 40px;
     }
+
     .our-project .row {
         margin: 0 20px;
     }
+
     .our-project .col-3 {
         width: 50%;
         padding: 15px 10px;
@@ -222,9 +259,11 @@
     .hero-project-video {
         height: 500px;
     }
+
     .hero-project-video .underline {
         bottom: -120px;
     }
+
     .title-hero-project-video {
         font-size: 30px;
         line-height: 15px;
@@ -236,15 +275,18 @@
         line-height: 20px;
         padding-top: 20px;
     }
+
     .video-player {
         bottom: -80px;
         max-width: 620px;
         height: 340px;
     }
+
     .player {
         width: 200px;
         height: 60px;
     }
+
     .player span {
         padding-left: 8px;
     }
@@ -252,6 +294,7 @@
     .subscribe {
         margin-top: 170px;
     }
+
     .title-subscribe {
         font-size: 16px;
         line-height: 22px;
@@ -263,18 +306,22 @@
         line-height: 25px;
         padding-bottom: 30px;
     }
+
     .input-registration {
         padding: 8px 5px 8px 33px;
         width: 260px;
     }
+
     .btn-registration {
         padding: 8px 26px 8px 36px;
         font-size: 13px;
     }
+
     .decs-bottom-subscribe {
         padding-top: 20px;
         font-size: 13px;
     }
+
     .info-others {
         margin-top: 50px;
         padding: 40px 0 20px;
@@ -289,14 +336,17 @@
         font-size: 14px;
         line-height: 20px;
     }
+
     .footer-list-item li:not(:last-child) {
-        padding-bottom:0;
+        padding-bottom: 0;
     }
-     .info-others .list-item a {
+
+    .info-others .list-item a {
         padding-left: 5px;
         font-size: 11px;
         line-height: 20px;
     }
+
     .footer-desc-bottom {
         margin-top: 80px;
         font-size: 13px;
@@ -314,16 +364,337 @@
     }
 
 
-
 }
 
 @media (max-width: 320px) {
 
-    .container{
+    .container {
         width: 280px;
     }
 
+    .underline {
+        width: 260px;
+    }
 
+    .logo {
+        font-size: 20px;
+        line-height: 20px;
+    }
+
+    .mobile-menu {
+        top: 50px;
+    }
+
+    .hero-link {
+        font-size: 12px;
+    }
+
+    .hero-title {
+        font-size: 20px;
+        line-height: 30px;
+        margin: 5px 0 20px;
+    }
+
+    .btn {
+        width: 90px;
+        height: 40px;
+        font-size: 11px;
+    }
+
+    .hero {
+        height: 70vh;
+    }
+
+    .info-company {
+        padding: 30px 0;
+    }
+
+    .title-company {
+        font-size: 17px;
+        line-height: 30px;
+        margin-bottom: 15px;
+    }
+
+    .desc-company {
+        font-size: 11px;
+    }
+
+    .service-icon svg {
+        width: 30px;
+        height: 30px;
+    }
+
+    .info-company .col-4 {
+        width: 100%;
+        padding: 0;
+    }
+
+    .company-content {
+        margin-top: 35px;
+    }
+
+    .service-icon {
+        width: 50px;
+        height: 50px;
+    }
+
+    .service-icon:before {
+        width: 70px;
+        height: 70px;
+    }
+
+    .services-item {
+        margin-left: 70px;
+    }
+
+    .title-company-content {
+        font-size: 15px;
+        line-height: 22px;
+        padding-top: 10px;
+    }
+
+    .desc-company-content {
+        font-size: 12px;
+        line-height: 22px;
+    }
+
+    .info-company .btn {
+        margin-top: 30px;
+    }
+
+    .projects {
+        padding: 0 0 35px;
+    }
+
+    .projects .col-6 {
+        width: 100%;
+        padding: 15px 10px;
+    }
+
+    .title-projects {
+        font-size: 19px;
+        line-height: 25px;
+        padding-bottom: 10px;
+    }
+
+    .desc-projects {
+        font-size: 11px;
+        line-height: 23px;
+        padding-bottom: 0;
+    }
+
+    .link-project {
+        font-size: 12px;
+        line-height: 0;
+    }
+
+    .projects .underline {
+        bottom: 210px;
+    }
+
+    .standard-list {
+        margin-top: 50px;
+        display: flex;
+        flex-flow: wrap;
+    }
+
+    .standard-icon {
+        display: flex;
+        padding: 15px;
+    }
+
+    .standard-icon {
+        display: flex;
+        padding: 15px 0 0 15px;
+    }
+
+    .standard-icon h4 {
+        padding: 0 5px 0;
+        font-size: 30px;
+        line-height: 30px;
+    }
+
+    .standard-item p {
+        font-size: 14px;
+        line-height: 15px;
+    }
+
+    .team-project {
+        padding: 25px 0 45px;
+    }
+
+    .team-project .col-4 {
+        width: 100%;
+    }
+
+    .team-project:before {
+        height: 10%;
+    }
+
+    .team-project .underline {
+        bottom: 25px;
+    }
+
+    .title-team-project {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .team-project-content {
+        padding-top: 30px;
+    }
+
+    .title-team-content {
+        padding: 15px 0;
+        font-size: 15px;
+        line-height: 20px;
+    }
+
+    .desc-team-content {
+        font-size: 10px;
+        line-height: 22px;
+    }
+
+    .link-team-project {
+        padding-top: 10px;
+        font-size: 11px;
+        line-height: 20px;
+    }
+
+    .our-project {
+        padding: 30px 0 40px;
+    }
+
+    .title-our-project {
+        font-size: 25px;
+        line-height: 15px;
+        margin-bottom: 20px;
+    }
+
+    .desc-our-project {
+        font-size: 12px;
+        line-height: 25px;
+        margin-bottom: 25px;
+    }
+
+    .our-project .col-3 {
+        width: 100%;
+        padding: 10px 10px;
+    }
+
+    .our-project .btn {
+        margin-top: 15px;
+    }
+
+    .hero-project-video {
+        height: 300px;
+    }
+
+    .hero-project-video .underline {
+        bottom: -80px;
+    }
+
+    .title-hero-project-video {
+        font-size: 20px;
+        line-height: 10px;
+        padding-top: 50px;
+    }
+
+    .desc-hero-project-video {
+        font-size: 11px;
+        line-height: 25px;
+        padding-top: 10px;
+    }
+
+    .video-player {
+        bottom: -40px;
+        max-width: 250px;
+        height: 200px;
+    }
+
+    .player {
+        width: 150px;
+        height: 50px;
+    }
+
+    .player span {
+        font-size: 14px;
+    }
+
+    .subscribe {
+        margin-top: 120px;
+    }
+
+    .title-subscribe {
+        font-size: 15px;
+        line-height: 22px;
+        padding-bottom: 5px;
+    }
+
+    .desc-subscribe {
+        font-size: 12px;
+        line-height: 20px;
+        padding-bottom: 15px;
+    }
+
+    .input-registration {
+        padding: 5px 5px 5px 20px;
+        width: 155px;
+    }
+
+    .btn-registration {
+        padding: 5px 10px 5px 10px;
+        font-size: 11px;
+    }
+
+    .decs-bottom-subscribe {
+        padding-top: 15px;
+        font-size: 12px;
+    }
+
+    .info-others {
+        margin-top: 30px;
+        padding: 25px 0 20px;
+    }
+
+    .col-3 {
+        width: 100%;
+        padding: 10px 10px;
+    }
+
+    .footer-content-title {
+        padding-bottom: 0;
+        font-size: 13px;
+        line-height: 0;
+    }
+
+    .info-others .list-item a {
+        padding-left: 5px;
+        font-size: 11px;
+        line-height: 10px;
+    }
+
+    .footer-desc-bottom {
+        margin-top: 50px;
+        font-size: 11px;
+        line-height: 30px;
+    }
+
+    .mobile-menu {
+        width: 40px;
+        height: 35px;
+    }
+
+    .top-menu-item:not(:last-child) {
+        margin-right: 0;
+    }
+
+    .top-menu.show .top-menu-item {
+        font-size: 12px;
+        margin-top: 45px;
+        padding: 10px;
+        z-index: 9;
+    }
 }
 
 
